--- a/Brief/HomeViewController.xib
+++ b/Brief/HomeViewController.xib
@@ -9,9 +9,12 @@
                 <outlet property="completedButton" destination="SQh-Xg-khp" id="tJg-eN-gns"/>
                 <outlet property="completedImageView" destination="fjF-vr-KMZ" id="Hm5-pu-cH7"/>
                 <outlet property="completedLabel" destination="Ul2-HT-6Wn" id="6FA-0x-yoF"/>
+                <outlet property="completedView" destination="jFv-fn-57K" id="ce5-Ic-xm5"/>
                 <outlet property="composeButton" destination="b4b-st-HJq" id="W90-hv-dtC"/>
                 <outlet property="composeImageView" destination="rSI-j2-YFd" id="H5Z-rb-sye"/>
                 <outlet property="composeLabel" destination="jc6-df-MJB" id="jQx-E5-tN5"/>
+                <outlet property="composeView" destination="cE6-ds-rN4" id="ihK-dl-Rgg"/>
+                <outlet property="reviewView" destination="VBi-2t-PYz" id="LfO-Hu-mLn"/>
                 <outlet property="userNameLabel" destination="YI8-C9-oSS" id="5tS-aG-yhL"/>
                 <outlet property="view" destination="Fda-Io-Fys" id="u8y-Et-Psl"/>
             </connections>
